rnsc/test_data/integration/error/parser/class_body/dot_class_trailing_token_recovers.rns
.class 42 with trailing tokens

.super java/lang/Object

unexpected
